[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://fonts/Jersey25-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds/police-siren-21498.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/Jersey25-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = SubResource( 4 )

[node name="Main" type="Control"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 1030.0
color = Color( 0.00392157, 0, 0, 1 )

[node name="TextClock" type="Label" parent="."]
margin_left = 404.0
margin_top = 141.0
margin_right = 603.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )

[node name="Text1" type="Label" parent="."]
margin_left = 120.0
margin_top = 410.0
margin_right = 912.0
margin_bottom = 865.0
custom_fonts/font = SubResource( 3 )
align = 3
autowrap = true

[node name="update" type="Timer" parent="."]
autostart = true

[node name="Begin" type="Button" parent="."]
visible = false
margin_left = 784.0
margin_top = 881.0
margin_right = 916.0
margin_bottom = 933.0
custom_fonts/font = SubResource( 5 )
text = "Empezar"

[node name="backgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="update" to="." method="_on_update_timeout"]
[connection signal="pressed" from="Begin" to="." method="_on_Begin_pressed"]
